--- a/sass/components/_button-section.scss
+++ b/sass/components/_button-section.scss
@@ -1,14 +1,30 @@
 .portfolio-button {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+  @media screen and (min-width: 768px) {
+   margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+   margin-bottom: 50px;
+  }
   
   &__list {
-    @extend %flex-justify-content;
-    margin: 0;
-  }
-
+   display: flex;
+   justify-content: flex-start;
+   flex-wrap: wrap;
+   @media screen and (min-width: 768px) {
+      flex-wrap: nowrap;
+      justify-content: center;
+     }
+   }
   &__list > .iten:not(:last-child) {
     margin-right: 8px;
   }
+  &__list > .iten:nth-child(-n+3) {
+   margin-bottom: 15px;
+   @media screen and (min-width: 768px) {
+      margin-bottom: 0;
+     }
+ }
 
   &__current {
     display: inline-block;
