--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 
 @import "./components/logo";
 @import "./components/container";
-@import "./components/header";
+// @import "./components/header";
 @import "./components/contacts";
 @import "./components/title";
 @import "./components/heading";
