--- a/css/main.css
+++ b/css/main.css
@@ -40,11 +40,18 @@ body {
   margin: -1px;
 }
 
+.contacts-list__info {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.social-box__icon, .social-box__team, .user-client__team, .team-box__icon, .team-box__social {
+  display: flex;
+  justify-content: center;
+}
+
 .logo {
   text-decoration: none;
-  display: flex;
-  padding-top: 24px;
-  padding-bottom: 24px;
   font-family: "Raleway", sans-serif;
   font-size: 26px;
   line-height: 1.19;
@@ -59,94 +66,28 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 }
-
-.border {
-  border-bottom: 1px solid #ececec;
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
-.header-div {
-  display: flex;
-  align-items: center;
-}
-
-.site-nav {
-  display: flex;
-  margin-left: 93px;
-  align-items: baseline;
-}
-.site-nav__iten:not(:last-child) {
-  margin-right: 50px;
-}
-.site-nav__list {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  color: var(--title-text-color);
-  letter-spacing: 0.02em;
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.site-nav__list:focus {
-  color: var(--activ-color);
-}
-.site-nav__list:hover {
-  color: var(--activ-color);
-}
-.site-nav__list:hover::after {
-  content: "";
-  height: 4px;
-  width: 100%;
-  background-color: #2196f3;
-  border-radius: 2px;
-  margin-top: 30px;
-  display: block;
-  position: absolute;
-}
-.site-nav__list--activ {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  color: var(--activ-color);
-  letter-spacing: 0.02em;
-  position: relative;
-  text-decoration: none;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.site-nav__list--activ:focus {
-  color: var(--activ-color);
-}
-.site-nav__list--activ:hover {
-  color: var(--activ-color);
-}
-.site-nav__list--activ::after {
-  content: "";
-  height: 4px;
-  width: 100%;
-  background-color: #2196f3;
-  border-radius: 2px;
-  margin-top: 30px;
-  display: block;
-  position: absolute;
-}
-
-.contacts {
-  display: flex;
-  margin-left: auto;
-}
-.contacts-list {
+.contacts, .contacts-list {
   display: flex;
   margin-left: auto;
 }
@@ -163,14 +104,12 @@ body {
 }
 .contacts-list__info {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
+  font-weight: 500;
+  letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--primary-text-color);
-  letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-list__info:hover, .contacts-list__info:focus {
@@ -375,13 +314,7 @@ body {
   display: block;
   margin-top: 16px;
 }
-.team-box__social {
-  display: flex;
-  justify-content: center;
-}
 .team-box__icon {
-  display: flex;
-  justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
@@ -413,10 +346,6 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
 }
-.user-client__team {
-  display: flex;
-  justify-content: center;
-}
 .user-client__list {
   display: flex;
   width: 170px;
@@ -444,6 +373,7 @@ body {
 
 .footer-div {
   display: block;
+  margin-bottom: 60px;
 }
 
 .footer-container {
@@ -453,22 +383,25 @@ body {
 }
 
 .logo-footer {
-  padding-bottom: 20px;
   padding-top: 0;
   width: 145px;
+  text-align: center;
 }
 
 .footer-contacts {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 .address {
-  margin: 0;
-  width: 231px;
   font-size: 14px;
   line-height: 1.71;
-  font-style: normal;
   letter-spacing: 0.03em;
+  width: 231px;
+  margin-top: 20px;
+  font-style: normal;
 }
 .address__contacts {
   display: flex;
@@ -477,7 +410,7 @@ body {
   padding-left: 0;
 }
 .address__iten:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
 }
 .address__list {
   color: var(--color-footer-contacts);
@@ -493,14 +426,14 @@ body {
 }
 
 .social-box {
-  margin-top: 12px;
-  margin-left: 70px;
+  align-items: center;
+  margin-bottom: 60px;
 }
 .social-box__title {
   display: block;
   margin: 0;
-  text-align: left;
-  padding-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -508,13 +441,7 @@ body {
   text-transform: uppercase;
   color: var(--color-text-reserve);
 }
-.social-box__team {
-  display: flex;
-  justify-content: center;
-}
 .social-box__icon {
-  display: flex;
-  justify-content: center;
   align-items: center;
   width: 44px;
   height: 44px;
@@ -533,18 +460,21 @@ body {
 }
 
 .user-mail {
-  margin-top: 12px;
-  margin-left: 93px;
+  align-items: center;
+  width: 100%;
 }
 .user-mail__form {
   display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .user-mail__label {
+  display: inline-block;
+  width: 100%;
   box-sizing: border-box;
   outline: none;
 }
 .user-mail__input {
-  display: flex;
   box-sizing: border-box;
   align-items: center;
   outline: none;
@@ -556,7 +486,7 @@ body {
   letter-spacing: 0.03em;
   color: var(--color-footer-contacts);
   height: 50px;
-  width: 358px;
+  width: 100%;
   padding-left: 16px;
   background-color: #2f303a;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -576,9 +506,9 @@ body {
   justify-content: center;
   border: 2px solid var(--activ-color);
   border-radius: 4px;
-  margin-left: 12px;
   width: 200px;
   height: 50px;
+  margin-top: 20px;
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
@@ -801,20 +731,50 @@ body {
 }
 
 .portfolio-section {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-section {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .portfolio-button {
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-button {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .portfolio-button {
+    margin-bottom: 50px;
+  }
 }
 .portfolio-button__list {
   display: flex;
-  justify-content: center;
-  margin: 0;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-button__list {
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
 }
 .portfolio-button__list > .iten:not(:last-child) {
   margin-right: 8px;
+}
+.portfolio-button__list > .iten:nth-child(-n+3) {
+  margin-bottom: 15px;
+}
+@media screen and (min-width: 768px) {
+  .portfolio-button__list > .iten:nth-child(-n+3) {
+    margin-bottom: 0;
+  }
 }
 .portfolio-button__current {
   display: inline-block;
@@ -822,14 +782,14 @@ body {
   text-align: center;
   padding: 6px 22px;
   cursor: pointer;
-  font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   font-family: inherit;
   color: var(--title-text-color);
   background-color: #f5f4fa;
   border: none;
-  letter-spacing: 0.03em;
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -839,14 +799,14 @@ body {
   text-align: center;
   padding: 6px 22px;
   cursor: pointer;
-  font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
+  font-weight: 500;
+  letter-spacing: 0.03em;
   font-family: inherit;
   color: var(--color-text-reserve);
   background-color: #2196f3;
   border: none;
-  letter-spacing: 0.03em;
   border-radius: 4px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -858,29 +818,74 @@ body {
 }
 
 .user-portfolio {
-  display: flex;
-  flex-wrap: wrap;
+  margin-bottom: -30px;
+}
+@media screen and (min-width: 768px) {
+  .user-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .user-portfolio {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
 .user-portfolio__element {
-  width: 370px;
-  margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+  flex-shrink: 0;
+  width: 100%;
+  height: 404px;
   margin-bottom: 30px;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .user-portfolio__element {
+    width: calc(50% - 30px);
+    margin-right: 30px;
+    height: 440px;
+  }
+  .user-portfolio__element:nth-child(9) {
+    margin-bottom: 0;
+  }
+  .user-portfolio__element:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .user-portfolio__element {
+    width: calc(33.3333333333% - 30px);
+    margin-right: 30px;
+    height: 404px;
+  }
+  .user-portfolio__element:nth-last-child(-n+3) {
+    margin-bottom: 0;
+  }
+  .user-portfolio__element:nth-child(2n) {
+    margin-right: 30px;
+  }
+  .user-portfolio__element:nth-child(3n) {
+    margin-right: 0;
+  }
+}
 .user-portfolio__element:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-.user-portfolio__element:nth-child(3n) {
-  margin-right: 0;
-}
-.user-portfolio__element:nth-last-child(-n+3) {
-  margin-bottom: 0;
 }
 .user-portfolio__img {
   position: relative;
   overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .user-portfolio__img {
+    height: 294px;
+  }
 }
 .user-portfolio__text {
   position: absolute;
@@ -903,12 +908,17 @@ body {
   display: block;
 }
 .user-portfolio__title {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+  flex-shrink: 0;
   padding-top: 20px;
   padding-left: 24px;
   padding-bottom: 20px;
 }
 .user-portfolio__name {
   display: block;
+  word-wrap: break-word;
   margin: 0 0 4px 0;
   font-weight: 700;
   font-size: 18px;
