--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -1,7 +1,7 @@
 .address {
   @include font-styles(14px, 1.71, null, 0.03em);
   width: 231px;
-  margin: 0;
+  margin-top: 20px;
   font-style: normal;
     
   &__contacts {
@@ -11,7 +11,8 @@
     padding-left: 0;
   }
   &__iten:not(:last-child) {
-    margin-bottom: 9px;
+   //  margin-bottom: 9px;
+   margin-bottom: 8px;
   }
   &__list {
     color: var(--color-footer-contacts);
