--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,19 +1,25 @@
 .footer-div {
   display: block;
+  margin-bottom: 60px;
 }
 
 .footer-container {
-  background-color: #2f303a;
-  padding-top: 60px;
-  padding-bottom: 60px;
+   background-color: #2f303a;
+   padding-top: 60px;
+   padding-bottom: 60px;
 }
 
 .logo-footer {
-  padding-bottom: 20px;
+
   padding-top: 0;
   width: 145px;
+  text-align: center;
 }
 
 .footer-contacts {
-  display: flex;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   text-align: center;
+ 
 }
