--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,8 +1,8 @@
 .logo {
   text-decoration: none;
-  display: flex;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  // display: flex;
+  // padding-top: 24px;
+  // padding-bottom: 24px;
 
   font-family: "Raleway", sans-serif;
   font-size: 26px;
