--- a/sass/components/_user-mail.scss
+++ b/sass/components/_user-mail.scss
@@ -1,18 +1,26 @@
 .user-mail {
-  margin-top: 12px;
-  margin-left: 93px;
+  align-items: center;
+   width: 100%;
+
+//   margin-top: 12px;
+//   margin-left: 93px;
 
   &__form {
-    display: flex;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   
   }
 
   &__label {
+    display:inline-block;
+    width: 100%;
     box-sizing: border-box;
     outline: none;
   }
 
   &__input {
-    display: flex;
+    // display: flex;
     box-sizing: border-box;
     align-items: center;
     outline: none;
@@ -24,7 +32,7 @@
     letter-spacing: 0.03em;
     color: var(--color-footer-contacts);
     height: 50px;
-    width: 358px;
+    width: 100%;
     padding-left: 16px;
     background-color: #2f303a;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -47,9 +55,10 @@
     justify-content: center;
     border: 2px solid var(--activ-color);
     border-radius: 4px;
-    margin-left: 12px;
+    // margin-left: 12px;
     width: 200px;
     height: 50px;
+    margin-top: 20px;
 
     cursor: pointer;
     font-weight: 700;
