--- a/sass/components/_user-portfolio.scss
+++ b/sass/components/_user-portfolio.scss
@@ -1,11 +1,50 @@
 .user-portfolio {
-  display: flex;
-  flex-wrap: wrap;
+
+  margin-bottom: -30px;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 
   &__element {
-    width: 370px;
-    margin-right: 30px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 100%;
+    height: 404px;
     margin-bottom: 30px;
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
+      margin-right: 30px;
+      height: 440px;
+      &:nth-child(9) {
+        margin-bottom: 0;
+      }
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 3 - 30px);
+      margin-right: 30px;
+      &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+      }
+      &:nth-child(2n) {
+        margin-right: 30px;
+      }
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+      height: 404px;
+    }
     border: 1px solid #eeeeee;
     box-sizing: border-box;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -14,17 +53,20 @@
     &:hover {
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
-    &:nth-child(3n) {
-      margin-right: 0;
-    }
-    &:nth-last-child(-n + 3) {
-      margin-bottom: 0;
-    }
+    // &:nth-child(3n) {
+    //   margin-right: 0;
+    // }
+    // &:nth-last-child(-n + 3) {
+    //   margin-bottom: 0;
+    // }
   }
 
   &__img {
     position: relative;
     overflow: hidden;
+    @media screen and (min-width: 768px) {
+      height: 294px;
+    }
   }
 
   &__text {
@@ -40,6 +82,7 @@
     transform: translateY(100%);
     transition: 250ms linear;
     overflow: auto;
+    // flex-grow: 1;
 
     .user-portfolio__element:hover & {
       transform: translateY(0);
@@ -51,6 +94,11 @@
   }
 
   &__title {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 0;
+    flex-shrink: 0;
+    
     padding-top: 20px;
     padding-left: 24px;
     padding-bottom: 20px;
@@ -58,6 +106,7 @@
 
   &__name {
     display: block;
+    word-wrap: break-word;
     margin: 0 0 4px 0;
 
     font-weight: 700;
