--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -3,12 +3,15 @@
   width: 231px;
   margin-top: 20px;
   font-style: normal;
-    
+      
   &__contacts {
     display: flex;
     flex-direction: column;
     width: 231px;
     padding-left: 0;
+    @media screen and (min-width:1200px) {
+      align-items: flex-start;
+    }
   }
   &__iten:not(:last-child) {
    //  margin-bottom: 9px;
