--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -1,17 +1,53 @@
 .heading-features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &__list {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
 
   &__section {
-    display: block;
-    margin-left: auto;
-    width: 270px;
-    &:not(:last-child) {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 30px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    // margin-left: auto;
+    // width: 270px;
+    &:nth-child(4) {
+      margin-bottom: 0;
+    }
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
       margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+      &:nth-child(n + 3) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 4 - 30px);
+      margin-right: 30px;
+      margin-bottom: 0;
+      &:nth-child(4) {
+        margin-right: 0;
+      }
+      &:nth-child(2) {
+        margin-right: 30px;
+      }
     }
   }
 
@@ -31,20 +67,27 @@
 
   &__title {
     display: block;
+    text-align: center;
+    margin: 0;
     padding: 0;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
     letter-spacing: 0.03em;
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
   }
 
   &__text {
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
     margin: 10px 0 0 0;
     font-size: 14px;
     line-height: 1.71;
     color: var(--primary-text-color);
     letter-spacing: 0.03em;
+      
   }
 }
