--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,7 +1,19 @@
 .footer-div {
   display: block;
   margin-bottom: 60px;
-}
+   @media screen and (min-width: 768px) {
+    margin-right: 165px;
+    margin-bottom: 0;
+    align-items: center;
+   }
+   @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 70px;
+    margin-bottom: 0;
+   }
+  }
 
 .footer-container {
    background-color: #2f303a;
@@ -21,5 +33,20 @@
    flex-direction: column;
    align-items: center;
    text-align: center;
+
+   @media screen and (min-width: 768px) {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+   
+  }
  
 }
