--- a/sass/components/_heading-job.scss
+++ b/sass/components/_heading-job.scss
@@ -1,6 +1,10 @@
 .heading-job {
-  padding-bottom: 94px;
-
+  display: none;
+   
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    padding-bottom: 94px;
+  
   &__portfolio {
     display: block;
     margin: 0 0 50px 0;
@@ -44,4 +48,5 @@
   &__pict {
     display: block;
   }
+}
 }
