--- a/sass/components/_user-client.scss
+++ b/sass/components/_user-client.scss
@@ -1,36 +1,98 @@
 .user-client {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin: 0;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &__title {
     display: block;
-    margin: 0;
+    margin-top: 0;
+    padding: 0;
     text-align: center;
-    padding-bottom: 50px;
+    margin-bottom: 30px;
 
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
   }
 
   &__team {
-    @extend %flex-justify-content;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin: 0;
+    padding: 0;
   }
 
   &__list {
     display: flex;
-    width: 170px;
-    height: 92px;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    list-style: none;
+    height: auto;
     padding: 0;
+    margin-left: 0;
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 100%;
+    &:nth-child(-n + 5) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 480px) {
+    width: 210px;
 
-    &:not(:last-child) {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+    &:nth-child(n + 5) {
+      margin-bottom: 0;
+    }
+  }
+    @media screen and (min-width: 768px) {
+      // width: calc(100% / 3 - 30px);
+      width: 226px;
       margin-right: 30px;
+      &:nth-child(2n) {
+        margin-right: 30px;
+      }
+      &:nth-child(3n) {
+        margin-right: 0;
+      }
+      &:nth-child(n + 4) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      // width: calc(100% / 6 - 30px);
+      width: 170px;
+      margin-bottom: 0;
+      &:not(:last-child) {
+        margin-right: 30px;
+      }
+      &:nth-child(-n + 5) {
+        margin-bottom: 0;
+      }
     }
   }
 
   &__icon {
+    padding: 0;
     justify-content: center;
+    align-items: center;
     border: 1px solid #afb1b8;
     box-sizing: border-box;
     border-radius: 4px;
@@ -46,6 +108,14 @@
   }
 
   &__user-icon {
-    margin: 16px 32px;
+    height: 60px;
+    width: 106px;
+    margin: 16px 52px;
+    @media screen and (min-width: 768px) {
+      margin: 16px 60px; 
+  }
+  @media screen and (min-width: 1200px) {
+    margin: 16px 32px; 
+}
   }
 }
