--- a/sass/components/_user-mail.scss
+++ b/sass/components/_user-mail.scss
@@ -1,22 +1,35 @@
 .user-mail {
   align-items: center;
-   width: 100%;
+  width: 100%;
+  margin-top: 60px;
+  @media screen and (min-width: 1200px) {
+   display: flex;
+   width: 358px;
+   margin-top: 12px;
+   flex-direction: column;
+   align-items: flex-start;
+     }
 
-//   margin-top: 12px;
-//   margin-left: 93px;
+  
 
   &__form {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    align-items: flex-start;
+    }
   }
 
   &__label {
-    display:inline-block;
+    display: inline-block;
     width: 100%;
     box-sizing: border-box;
     outline: none;
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+      }
   }
 
   &__input {
@@ -37,6 +50,13 @@
     background-color: #2f303a;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
+     @media screen and (min-width: 768px) {
+      width: 450px;
+      }
+      @media screen and (min-width: 1200px) {
+        width: 358px;
+      }
 
     &:valid {
       border-color: var(--activ-color);
@@ -55,7 +75,7 @@
     justify-content: center;
     border: 2px solid var(--activ-color);
     border-radius: 4px;
-    // margin-left: 12px;
+    
     width: 200px;
     height: 50px;
     margin-top: 20px;
@@ -71,6 +91,11 @@
     letter-spacing: 0.06em;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 1200px) {
+      margin-top: 0;
+      margin-left: 12px;
+    } 
 
     &:hover,
     &:focus {
