--- a/sass/components/_user-team.scss
+++ b/sass/components/_user-team.scss
@@ -1,26 +1,45 @@
 .user-team {
   background-color: #f5f4fa;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &__title {
     display: block;
-    margin: 0;
+    margin-top: 0;
+    padding: 0;
     text-align: center;
-    padding-bottom: 50px;
+    margin-bottom: 30px;
 
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     letter-spacing: 0.03em;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+    }
   }
 
   &__list {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-right: 0;
+    @media screen and (min-width: 768px) {
+      flex-direction: row;
+      flex-wrap: wrap;;
+    }
+    
   }
 
   &__pict {
     display: block;
+    width: 100%;
+    height: auto;
   }
 
   &__img {
@@ -28,17 +47,48 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    width: 270px;
-
-    &:not(:last-child) {
-      margin-right: 30px;
+    // width: 270px;
+    width: 100%;
+    margin-bottom: 30px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    &:nth-child(4) {
+      margin-bottom: 0;
     }
+    @media screen and (min-width: 768px) {
+      width: calc(100% / 2 - 30px);
+      margin-right: 30px;
+      margin-bottom: 30px;
+      &:nth-child(2n) {
+        margin-right: 0;
+      }
+      &:nth-child(n + 3) {
+        margin-bottom: 0;
+      }
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc(100% / 4 - 30px);
+      margin-right: 30px;
+      margin-bottom: 0;
+      &:nth-child(4) {
+        margin-right: 0;
+      }
+      &:nth-child(2) {
+        margin-right: 30px;
+      }
+    }
+    // &:not(:last-child) {
+    //   margin-right: 30px;
+    // }
   }
 }
 
 .user-profession {
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 24px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 30px;
+  }
 
   &__name {
     display: block;
