--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,9 +7,9 @@
 @import "./components/logo";
 @import "./components/container";
 // @import "./components/header";
-@import "./components/contacts";
-@import "./components/title";
-@import "./components/heading";
+// @import "./components/contacts";
+// @import "./components/title";
+// @import "./components/heading";
 @import "./components/features";
 @import "./components/heading-job";
 @import "./components/user-team";
