--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -15,6 +15,7 @@
   &__section {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 100%;
     margin-bottom: 30px;
     flex-grow: 0;
