--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,14 +1,20 @@
 .logo {
   text-decoration: none;
   // display: flex;
-  // padding-top: 24px;
-  // padding-bottom: 24px;
+  margin-top: 16px;
+
 
   font-family: "Raleway", sans-serif;
-  font-size: 26px;
-  line-height: 1.19;
-  letter-spacing: 0.03em;
+  @include font-styles(24px, 1.17, 700, 0.03em);
   color: var(--activ-color);
+
+  @media screen and (min-width: 768px) {
+    margin-top: 26px;
+ }
+ @media screen and (min-width: 1200px) {
+    @include font-styles(26px, 1.19, 700, 0.03em);
+    margin-top: 24px;
+ }
 
   &__title {
     color: var(--color-header);
