--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,6 +1,9 @@
 .contacts {
   display: flex;
   margin-left: auto;
+  @media screen and (max-width: 767px) {
+    display: none;
+ }
 
   &-list {
     @extend .contacts;
