--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,87 +1,101 @@
-// .border {
-//   border-bottom: 1px solid #ececec;
-// }
+.border {
+  border-bottom: 1px solid #ececec;
+  @media screen and (max-width: 767px) {
+  height: 60px;
+  }
+  @media screen and (min-width: 768px) {
+   height: 80px;
+   }
+}
 
-// .header-div {
-//   display: flex;
-//   align-items: center;
-// }
+.header-div {
+  display: flex;
+}
 
-// .site-nav {
-//   display: flex;
-//   margin-left: 93px;
-//   align-items: baseline;
+.header-container {
+   display: flex;
+   padding: 0;
+   margin: 0;
+   // align-items: center;
+ }
 
-//   &__iten:not(:last-child) {
-//     margin-right: 50px;
-//   }
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+  @media screen and (max-width: 767px) {
+   display: none;
+}
 
-//   &__list {
-//     display: block;
-//     padding-top: 32px;
-//     padding-bottom: 32px;
+  &__iten:not(:last-child) {
+    margin-right: 50px;
+  }
 
-//     font-weight: 500;
-//     font-size: 14px;
-//     line-height: 1.14;
-//     color: var(--title-text-color);
-//     letter-spacing: 0.02em;
-//     position: relative;
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &__list {
+    display: block;
+    margin-top: 32px;
+   
 
-//     text-decoration: none;
-//     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    color: var(--title-text-color);
+    letter-spacing: 0.02em;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-//     &:focus {
-//       color: var(--activ-color);
-//     }
-//     &:hover {
-//       color: var(--activ-color);
+    text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:focus {
+      color: var(--activ-color);
+    }
+    &:hover {
+      color: var(--activ-color);
       
-//       &::after {
-//         content: "";
-//         height: 4px;
-//         width: 100%;
-//         background-color: #2196f3;
-//         border-radius: 2px;
-//         margin-top: 30px;
-//         display: block;
-//         position: absolute;
-//       }
-//     }
-//     &--activ {
-//       display: block;
-//       @extend %padding-hight;
+      &::after {
+        content: "";
+        height: 4px;
+        width: 100%;
+        background-color: #2196f3;
+        border-radius: 2px;
+        margin-top: 28px;
+        display: block;
+        position: absolute;
+      }
+    }
+    &--activ {
+      display: block;
+      margin-top: 32px;
 
-//       font-weight: 500;
-//       font-size: 14px;
-//       line-height: 1.14;
-//       color: var(--activ-color);
-//       letter-spacing: 0.02em;
-//       position: relative;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 1.14;
+      color: var(--activ-color);
+      letter-spacing: 0.02em;
+      position: relative;
 
-//       text-decoration: none;
-//       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      text-decoration: none;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-//       &:focus {
-//         color: var(--activ-color);
-//       }
-//       &:hover {
-//         color: var(--activ-color);
-//       }
-//       &::after {
-//         content: "";
-//         height: 4px;
-//         width: 100%;
-//         background-color: #2196f3;
-//         border-radius: 2px;
-//         margin-top: 30px;
-//         display: block;
-//         position: absolute;
-//       }
-//     }
-//   }
-// }
+      &:focus {
+        color: var(--activ-color);
+      }
+      &:hover {
+        color: var(--activ-color);
+      }
+      &::after {
+        content: "";
+        height: 4px;
+        width: 100%;
+        background-color: #2196f3;
+        border-radius: 2px;
+        margin-top: 28px;
+        display: block;
+        position: absolute;
+      }
+    }
+  }
+}
