--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -1,59 +1,89 @@
-// .heading {
-//   background-color: #c4c4c4;
+.heading {
+  background-color: #c4c4c4;
 //   height: 600px;
 //   padding-top: 200px;
-//   background-image: linear-gradient(
-//       to right,
-//       rgba(47, 48, 58, 0.4),
-//       rgba(47, 48, 58, 0.4)
-//     ),
-//     url(../img/hero.jpg);
+  height: 400px;
+  padding-top: 118px;
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/hero.jpg);
 
-//   background-repeat: no-repeat;
-//   background-position: center;
-//   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  @media screen and (min-width: 1200px) {
+   height: 600px;
+   padding-top: 200px;
+}
+  &__container {
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     flex-wrap: wrap;
+     
+  }
+  &__text {
+    display: block;
+    margin-top: 0;
+    margin-bottom: 30px;
+    text-align: center;
+    
+    font-weight: 900;
+   //  font-size: 44px;
+    font-size: 26px;
+    line-height: 1.61;
+   //  line-height: 1.36;
+    text-transform: uppercase;
+    color: var(--color-text-reserve);
+    letter-spacing: 0.06em;
+    @media screen and (min-width: 480px) {
+      margin-left: 60px;
+      margin-right: 60px;
+}
+    @media screen and (min-width: 768px) {
+         margin-left: 204px;
+         margin-right: 204px;
+}
+    @media screen and (min-width: 1200px) {
+      margin-left: 252px;
+      margin-right: 252px;
+      font-size: 44px;
+      line-height: 1.36;
+    }
+  }
 
-//   &__text {
-//     display: block;
-//     margin: 0 252px;
-//     text-align: center;
-//     margin-bottom: 30px;
+  &__button-activ {
+    display: inline-block;
+    align-items: center;
+    text-align: center;
+    border: 2px solid var(--activ-color);
+    border-radius: 4px;
+   //  margin: 0 485px;
 
-//     font-weight: 900;
-//     font-size: 44px;
-//     line-height: 1.36;
-//     text-transform: uppercase;
-//     color: var(--color-text-reserve);
-//     letter-spacing: 0.06em;
-//   }
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    font-family: inherit;
+    color: var(--color-text-reserve);
+    background-color: #2196f3;
+    border-color: var(--activ-color);
+    letter-spacing: 0.06em;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
 
-//   &__button-activ {
-//     display: inline-block;
-//     align-items: center;
-//     text-align: center;
-//     border: 2px solid var(--activ-color);
-//     border-radius: 4px;
-//     margin: 0 485px;
-//     width: 200px;
-//     height: 50px;
-//     cursor: pointer;
-//     font-weight: 700;
-//     font-size: 16px;
-//     line-height: 1.88;
-//     font-family: inherit;
-//     color: var(--color-text-reserve);
-//     background-color: #2196f3;
-//     border-color: var(--activ-color);
-//     letter-spacing: 0.06em;
-//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-//       fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//     &:hover,
-//     &:focus {
-//       background-color: #188ce8;
-//       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-//       border-radius: 4px;
-//       border-color: var(--activ-color);
-//     }
-//   }
-// }
+    &:hover,
+    &:focus {
+      background-color: #188ce8;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      border-radius: 4px;
+      border-color: var(--activ-color);
+    }
+  }
+}
