--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,10 +6,10 @@
 
 @import "./components/logo";
 @import "./components/container";
-// @import "./components/header";
-// @import "./components/contacts";
-// @import "./components/title";
-// @import "./components/heading";
+@import "./components/header";
+@import "./components/contacts";
+@import "./components/title";
+@import "./components/heading";
 @import "./components/features";
 @import "./components/heading-job";
 @import "./components/user-team";
