--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -4,17 +4,31 @@
   @media screen and (max-width: 767px) {
     display: none;
  }
+  @media screen and (max-width: 1199px) {
+    flex-direction: column;
+}
 
   &-list {
     @extend .contacts;
-
+    @media screen and (min-width: 1200px) {
+    margin-top: 32px;
+    }
     & > .iten {
       display: flex;
       align-items: center;
-    }
+    
+      
+      }
 
     &__iten:not(:last-child) {
       margin-right: 50px;
+    
+      
+      @media screen and (max-width: 1199px) {
+        margin-right: 0;
+        margin-bottom: 10px;
+        margin-top: 21px;
+     }
     }
 
     &__header-icon {
@@ -24,12 +38,16 @@
 
     &__info {
       display: flex;
-      @extend %padding-hight;
+      
       @include font-styles(14px, 1.14, 500, 0.02em);
       text-decoration: none;
       color: var(--primary-text-color);
       transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        @media screen and (max-width: 1199px) {
+          @include font-styles(12px, 1.17, 500, 0.02em);
+     }
+        
 
       &:hover,
       &:focus {
