--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -10,6 +10,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
   }
 
   &__section {
