--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,8 @@
 @import "./components/logo";
 @import "./components/container";
 @import "./components/header";
+@import "./components/mobile-menu-open";
+@import "./components/mobile-menu";
 @import "./components/contacts";
 @import "./components/title";
 @import "./components/heading";
