--- a/sass/components/_user-portfolio.scss
+++ b/sass/components/_user-portfolio.scss
@@ -77,12 +77,26 @@
     font-size: 18px;
     line-height: 1.56;
     letter-spacing: 0.03em;
-    padding: 63px 24px;
+    padding-top: 77px;
+    padding-left: 24px;
+    padding-right: 24px;
+    // padding: 77px 24px;
+    height: 100%;
     margin: 0;
     transform: translateY(100%);
     transition: 250ms linear;
     overflow: auto;
-    // flex-grow: 1;
+    flex-grow: 1;
+      @media screen and (min-width: 768px) {
+        // padding: 49px 24px 77px 24px;
+         padding-top: 49px;
+        
+      }
+      @media screen and (min-width: 1200px) {
+        // padding: 63px 24px;
+        padding-top: 63px;
+        
+      }
 
     .user-portfolio__element:hover & {
       transform: translateY(0);
