--- a/sass/components/_user-team.scss
+++ b/sass/components/_user-team.scss
@@ -31,7 +31,7 @@
     margin-right: 0;
     @media screen and (min-width: 768px) {
       flex-direction: row;
-      flex-wrap: wrap;;
+      flex-wrap: wrap;
     }
     
   }
