--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -9,7 +9,7 @@
   background-position: center;
   background-size: cover;
   background-image: linear-gradient(
-      to right,
+      to img-2xright,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
