--- a/sass/components/_heading.scss
+++ b/sass/components/_heading.scss
@@ -1,15 +1,12 @@
 .heading {
   background-color: #c4c4c4;
-  //   height: 600px;
-  //   padding-top: 200px;
-  height: 400px;
   padding-top: 118px;
   flex-grow: 1;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-image: linear-gradient(
-      to img-2xright,
+      to img-right,
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
