--- a/css/main.css
+++ b/css/main.css
@@ -441,13 +441,12 @@ body {
 
 .heading {
   background-color: #c4c4c4;
-  height: 400px;
   padding-top: 118px;
   flex-grow: 1;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: linear-gradient(to img-2xright, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-mob.jpg);
+  background-image: linear-gradient(to img-right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/hero-mob.jpg);
 }
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .heading {
